dev/python/module/b.txt
  File "a.py", line 1
    iport sys
            ^
SyntaxError: invalid syntax
